# azpos

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
csharp/: .editorconfig  Azpos.sln  Azpos.sln.DotSettings  Directory.Build.props  README.md
csharp/src/Azpos/: Azpos.csproj  AzposCalculator.cs  AzposException.cs
csharp/test/Azpos.Tests/: Azpos.Tests.csproj  AzposCalculatorTests.cs  AzposVectorsTests.cs  TestVectorTests.cs
go/: .editorconfig  .gitignore  README.md  azpos.go  azpos_test.go  go.mod  main.go
go/azpos/: azpos.go  azpos_test.go
java/: .editorconfig  README.md  pom.xml
java/src/main/java/com/fgrzl/azpos/: AzposCalculator.java  AzposException.java
python/: .editorconfig  .gitignore  azpos.py  test_azpos.py
rust/: .editorconfig  Cargo.toml  README.md
rust/src/: lib.rs  main.rs
scripts/: package.json  validate-vectors.ts
test-vectors/: expectations.json
ts/: .editorconfig  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
ts/src/: index.test.ts  index.ts
